<resources>
    <string name="app_name">Travel Expenses</string>
    <string name="distance">Distance</string>
    <string name="total_kilometers">Total Kilometers</string>
    <string name="price">Price </string>
    <string name="price_per_liter">Price p/ Liter</string>
    <string name="autonomy">Autonomy</string>
    <string name="km_per_liter">Km p/ Liter</string>
    <string name="total_spend">Your total expenses are: </string>
    <string name="total_value">$ 0</string>
    <string name="calculate">Calculate</string>
    <string name="validation_fill_all_fields">"Please fill all the fields"</string>
</resources>